# runes

./: .gitignore  Cargo.toml
runes_core/: Cargo.toml
runes_core/src/: ai_player.rs  board.rs  game.rs  human_player.rs  lib.rs  session.rs
runes_egui/: Cain.pxd  Cargo.toml
runes_egui/src/: main.rs  widgets.rs  wiregrid.rs
runes_tui/: Cargo.toml
runes_tui/src/: main.rs
